fix: update logo on mobile
* update logo on mobile devices to match with desktop version
* add `restart:always` to docker compose `db`

--- a/resources/sass/pages/alliance.scss
+++ b/resources/sass/pages/alliance.scss
@@ -128,7 +128,7 @@
 .sport-alliance .sidelogo img {
     content: url("/images/logo-ISTAA.png") !important;
     @media screen and (max-width: 576px) {
-        content: url("/images/logo-06-cut.png") !important;
+        content: url("/images/logo-ISTAA.png") !important;
     }
 }
 
